# score_lerobot_episodes

./: .gitignore  README.md  pyproject.toml  score_dataset.py  ui.py
scripts/: evaluate_semantic_baseline.py  export_condition_frames.py  recover_split_info.py  run_baseline_all.sh  run_validation_experiment.py  score_all_datasets.py  simulate_mixed_validation.py  train_fs_blocks.py  verify_adapter.py
src/score_lerobot_episodes/: data.py  semantic_adapter.py
src/score_lerobot_episodes/scores/: __init__.py  path.py  semantic_score.py  visual.py
