[project]
name = "score-lerobot-episodes"
version = "0.1.0"
description = "Utilities for scoring LeRobot episodes"
requires-python = ">=3.10"
dependencies = [
    "lerobot",
    "opencv-python",
    "numpy",
    "pandas",
    "google-generativeai",
    "pydantic",
    "streamlit",
    "plotly",
    "python-dotenv",
    "uniplot",
    "pyarrow",
    "ffmpeg-python>=0.2.0",
    "scipy>=1.15.3",
    "pytest>=9.0.2",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
